--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@
 :root {
     --main-font: "Rubik", sans-serif;
     --chat-font: "Nunito Sans", sans-serif;
+
+    --secondary-color: #1D1F1F;
+    --primary-color: #161717;
+
+    --border-color: #343636;
+
+    --font-color: #ABACAC;
 }
 
 body {
@@ -17,8 +24,9 @@ body {
 
 .menu-lateral {
 
-    background-color: black;
-    width: 40px;
+    background-color: var(--secondary-color);
+    border-right: solid var(--border-color) 1px;
+    width: 60px;
     height: 100%;
 
     ol {
@@ -43,17 +51,31 @@ body {
             align-items: center;
             justify-content: center;
             height: 4.5%;
-            width: 90%;
+            width: 35px;
             border-radius: 50%;
+            font-size: 1.1rem;
             color: transparent;
             cursor: pointer;
-            -webkit-text-stroke-width: 0.5px;
-            -webkit-text-stroke-color: white;
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: var(--font-color);
+        }
+
+        div.meta {
+            border-top: 1px solid var(--border-color);
+            margin-top: 5px;
+            height: 35px;
+            width: 35px;
+        }
+
+        .icon-menu-lateral.meta {
+            width: 100%;
+            height: 100%;
+            
         }
 
         .icon-menu-lateral:hover {
             -webkit-text-stroke-color: rgb(82, 235, 82);
-            background-color: rgb(29, 29, 29);
+            background-color: var(--border-color);
         }
 
     }
@@ -70,8 +92,8 @@ body {
     .profile-img {
         display: flex;
         border-radius: 50%;
-        width: 80%;
-        height: 35%;
+        width: 35px;
+        height: 35px;
         overflow: hidden;
         align-items: center;
         justify-content: center;
@@ -94,16 +116,18 @@ body {
 }
 
 .conversas {
-
     display: flex;
     flex-direction: column;
-    background-color: black;
+    background-color: var(--primary-color);
     height: 100%;
-    padding: 1rem;
     padding-bottom: 0px;
 
     .container-header-conversas {
+        padding: 1rem;
         width: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
         padding-bottom: 20px;
 
         .container-input {
@@ -111,31 +135,32 @@ body {
             height: 30px;
             display: flex;
             align-items: center;
-            justify-content: center;
             position: relative;
-            
+            padding-block: 20px;
+
             input {
                 position: absolute;
                 width: 100%;
                 height: 100%;
-                border-radius: 5px;
+                border-radius: 20px;
                 border: none;
                 outline: none;
-                border-bottom: green solid 2px;
-                padding-left: 10px;
-                padding-right: 15px;
+                padding-left: 30px;
                 color: white;
+                background-color: var(--border-color);
             }
 
             input::-webkit-input-placeholder {
-                color: grey;
+                color: var(--font-color);
             }
 
             .lupa {
-                margin-left: 90%;
+                font-size: 0.8rem;
+                margin-bottom: 2.5px;
+                margin-left: 10px;
                 position: absolute;
                 z-index: 2;
-                color: rgb(235, 235, 235);
+                color: var(--font-color);
             }
 
         }
@@ -151,7 +176,7 @@ body {
                 padding: 10px;
                 font-family: var(--main-font);
                 font-weight: 400;
-                font-size: 20px;
+                font-size: 25px;
             }
 
             .container-icons-header-info {
@@ -165,22 +190,26 @@ body {
     }
 
     .container-conversas {
-        background-color: tomato;
-        width: 20vw;
+        width: 30vw;
+        min-width: 25rem;
         height: 100%;
         overflow-y: auto;
-        scrollbar-color: black;
+        overflow-x: hidden;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: start;
 
         .container-conversa {
             transition: transform 0.3s ease-in-out;
-            width: 100%;
+            width: 97%;
             height: auto;
-            padding: 5px;
             display: flex;
             border-radius: 10px;
+            padding: 10px;
+            
 
             .container-profile-img {
-                width: 3.5rem;
                 height: auto;
                 display: flex;
                 align-items: center;
@@ -189,7 +218,7 @@ body {
 
                 img {
                     border-radius: 50%;
-                    width: 100%;
+                    width: 3rem;
                     object-fit: contain;
                 }
 
@@ -211,7 +240,12 @@ body {
                     justify-content: space-between;
                     font-weight: 800;
 
+                    span {
+                        color: rgb(242, 242, 242);
+                    }
+
                     p {
+                        color: var(--font-color);
                         font-size: 12px;
                         font-weight: 400;
                     }
@@ -219,6 +253,7 @@ body {
                 }
 
                 .last-message {
+                    color: var(--font-color);
                     font-size: 12px;
                 }
 
@@ -228,16 +263,22 @@ body {
 
         .container-conversa:hover {
             background-color: rgba(128, 128, 128, 0.658);
-            transform: scale(1.03);
         }
 
     }
 
+    .container-conversas::-webkit-scrollbar {
+        width: 5px;
+    }
+
     .container-conversas::-webkit-scrollbar-track {
-        background: rgb(0, 0, 0);
+        background: var(--secondary-color);
         
     }
 
+    .container-conversas::-webkit-scrollbar-thumb {
+        background-color: var(--border-color);
+        border-radius: 5px;
+    }
+
 }
-
-
